# renderama

./: .gitignore  Cargo.toml  LICENSE  README.md  cornell_box_denoised.hdr
.github/workflows/: rust-tests.yml
src/: aabb.rs  basis.rs  bvh.rs  camera.rs  denoise.rs  hitable.rs  integrator.rs  main.rs  materials.rs  pdf.rs  plane.rs  post.rs  prism.rs  ray.rs  rectangle.rs  sampling.rs  scene.rs  sphere.rs  texture.rs  tone.rs  transformations.rs  triangle.rs  utils.rs  volume.rs  world.rs
