[package]
name = "renderama"
version = "0.19.0"
authors = ["mandeep <mandeep@users.noreply.github.com>"]

[features]
denoise = ["oidn"]

[dependencies]
chrono = "0.4.10"
glam = "0.8.2"
image = "0.22.3"
image2 = "0.11.3"
nalgebra = "0.19.0"
oidn = { version = "0.2.0", optional = true }
pbr = "1.0.2"
rand = "0.7.2"
rand_distr = "0.2.2"
rayon = "1.2.1"
tobj = "0.1.11"

[profile.dev]
opt-level = 3
debug = true
